@@ -42,6 +42,7 @@
 	* recognize pcfs_args_t fields in FreeBSD 5
 	* recognize other mount types in pawd: host, linkx, and nfsx
 	* allow exactly one of umount and unmount in type:=program
+	* race condition between calls to mntctl() on AIX
 
 *** Notes specific to am-utils version 6.1b4
 
