@@ -1,3 +1,9 @@
+2004-09-01  Erez Zadok  <ezk@cs.sunysb.edu>
+
+	* conf/mtab/mtab_aix.c (read_mtab): avoid a race condition between
+	multiple calls to mntctl().  Patch suggested by Michael van Elst
+	<M.van.Elst@science-computing.de>.
+
 2004-08-07  Erez Zadok  <ezk@cs.sunysb.edu>
 
 	* doc/am-utils.texi (Program Filesystem): document how to get
